Updated file system structure based on collaboration with Ravi. Relocated: moment.min.js to /resources/js; renamed app.js as app.module.js and moved to/apps; per Ng 1.5.8 tutorial, componentized 'waiver-list' and relocated files to new dir 'waiver-list'

--- a/app/apps/waivers/waivers-list.html
+++ b/app/apps/waivers/waivers-list.html
@@ -1,5 +1,5 @@
 <div data-ng-controller="WaiverListCtrl" id="mainContent" class="" role="main">
-    <h1>Demonstrations & Waivers</h1>
+    <h1>Demonstrations &amp Waivers</h1>
     <p>Waivers are vehicles states can use to test new or existing ways to deliver and pay for health care services in Medicaid and the Children’s Health Insurance Program (CHIP). Learn more about waiver and demonstration authorities. In September 2014, the Centers for Medicare &#38; Medicaid Services initiated a national, cross-state evaluation of four types of Medicaid section 1115 demonstrations. See the evaluation design.</p>
 
 	<div id="facet">
