--- a/app/waivers/index.html
+++ b/app/waivers/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-<!--[if lte IE 9]> <html lang="en-us" dir="ltr" class="preIE9"> <![endif]-->
 <!--[if gt IE 9]><!-->
 <html lang="en-us" data-ng-app="waiverApp">
 <head>
@@ -11,6 +10,7 @@
   <link media="all" rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <link media="all" rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link media="all" rel="stylesheet" type="text/css" href="/resources/css/mega-menu.css">
+  <link media="all" rel="stylesheet" type="text/css" href="/resources/css/app.css">
     <!-- Angular Material style sheet -->
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.11.4/angular-material.min.css">
     <link media="all" rel="stylesheet" type="text/css" href="/resources/css/jquery-ui.css">
@@ -33,8 +33,8 @@
 <div id="pageContent">
 	<div class="breadcrumbs"><a href="/index.html">Home</a> &gt; <span>Medicaid</span></div>
 
-<div ng-view></div>
-
+<!-- div data-ng-view></div -->
+	<waiver-list></waiver-list>
 </div><!-- #pageContent end -->
 
 <!-- Global Footer End -->
@@ -55,9 +55,10 @@
 	<!-- Angular Material Library -->
 	<script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
 
-	<script src="/apps/vendor/moment.min.js"></script>
-	<script src="js/app.js"></script>
-	<!-- script src="js/controllers.js"></script -->
+	<script src="/resources/js/moment.min.js"></script>
+	<script src="/apps/app.module.js"></script>
+	<script src="/apps/waiver-list/waiver-list.module.js"></script>
+	<script src="/apps/waiver-list/waiver-list.component.js"></script>
 	<!--<script src="js/directive.js"></script>-->
 	<!-- script src="/apps/components/dirPagination.js"></script -->
     <script src="/resources/js/jquery-ui.js"></script>
