- Added 'Reset Form' functionality   - created clearFilters() to reset keywords search and   sortProp fields to default values   - applied clearFilters() to the Reset Form button, changed from <input> - Commented out / removed references to angular-route.js

--- a/app/apps/waiver-list/waiver-list.template.html
+++ b/app/apps/waiver-list/waiver-list.template.html
@@ -12,7 +12,7 @@
 				<span class="small"><br/>(i.e. disabled, childless adults, etc.)</span>
 
 			</div>
-			<input type="button" class="resetButton" value="Reset Form"/>
+			<button type="button" data-ng-click="$ctrl.clearFilters()" class="usa-button usa-button-primary reset-all-filters-button">Reset Form</button>
 		</div><!-- end: Refine Your Search -->
 				
 <!-- TO DO: remove inline styles -->
