--- a/app/waivers/index.html
+++ b/app/waivers/index.html
@@ -48,7 +48,7 @@
 <!--Equalizer END-->
 
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
+	<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script> --><!-- also add to bower.json under "dependencies"  "angular-route": "~1.5.0"; also update karma.conf.js with 'bower_components/angular-route/angular-route.js', -->
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-aria.min.js"></script>
