--- a/app/waivers/index.html
+++ b/app/waivers/index.html
@@ -52,6 +52,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-aria.min.js"></script>
+	<!-- Angular-filter Library -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.11/angular-filter.min.js"></script>
 	<!-- Angular Material Library -->
 	<script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
 
@@ -60,7 +62,7 @@
 	<script src="/apps/waiver-list/waiver-list.module.js"></script>
 	<script src="/apps/waiver-list/waiver-list.component.js"></script>
 	<!--<script src="js/directive.js"></script>-->
-	<!-- script src="/apps/components/dirPagination.js"></script -->
+	<script src="/apps/components/pagination/dirPagination.js"></script>
     <script src="/resources/js/jquery-ui.js"></script>
 
 <script>
